fix z-index in firefox

--- a/static/style/main.css
+++ b/static/style/main.css
@@ -376,6 +376,7 @@ header {
 header.global {
     position: sticky;
     top: 0;
+    z-index: 99999;
     padding: var(--v-spacing) var(--h-spacing);
     background-color: var(--chrome-bg);
     backdrop-filter: blur(10px);
